# coin

./: .clang-format  CMakeLists.txt  Makefile  README.md  coin  meson.build
.cache/clangd/index/: component.c.EE75516531E780A3.idx  component.h.BADF9CBA7F9B3D7D.idx  debugrect.c.8EE2762D456841E5.idx  debugrect.h.5987A980BC6DA602.idx  ecs.h.CE8B10FCDBC0BE2D.idx  ecs.h.CF7209C142BCD6EC.idx  glad.c.59DBD1227050A0E3.idx  glad.c.F4AA080AB72DE743.idx  glad.h.207DA157525590DA.idx  glad.h.99E657E4B90A8DFC.idx  graphics.c.F4482649C4CCA4E2.idx  graphics.h.C66E28C28C2BDC6B.idx  init.c.6BB513751D37655B.idx  init.c.A63B776F072A0540.idx  init.h.08C8FFDA4A1CB8C3.idx  init.h.2869E7A27845FD7F.idx  input.c.24689560AB226E0C.idx  input.c.C6736DC1DBB435A5.idx  input.h.32DD49E87798C78C.idx  input.h.F6D3E5B01D60C7E5.idx  khrplatform.h.24E764DA14C4BBEA.idx  khrplatform.h.28010978C61275D4.idx  loop.c.8EB0D76B7BC191B4.idx  loop.c.A419F9BBFA988E02.idx  loop.h.7987D899B4C4017C.idx  loop.h.BA250400A1FE6E57.idx  main.c.29A2E027C8D1D564.idx  main.c.3E03ABC18C08986B.idx  main.cpp.58D51260C0DAB550.idx  rect.c.FB7538CF15FCE45E.idx  rect.h.A9A110451933C9B8.idx  render.c.714C1558D7CBA52F.idx  (+13 more)
.github/workflows/: c-cpp.yml
include/: graphics.h
include/engine/: ecs.h  init.h  input.h  loop.h  render.h  shader.h  update.h
include/glad/: glad.h
shaders/diffuse/: diffuse.fsh  diffuse.vsh
src/: big.hpp  game.cpp  game.hpp  main.c  main.cpp  meson.build  rand.cpp  rand.hpp  save.cpp  save.hpp
src/engine/: glad.c  init.c  input.c  loop.c  meson.build  render.c  render_math.c  shader.c  update.c
(+4 files in other folders)
